--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Crypt::OpenSSL::Random.
 
+0.03  Thu Sep 06 23:05:36
+        - Added documentation
+
 0.02  Mon Apr  9 18:55:30 2001
         - Got rid of perl 5.6 dependencies.  Bad perl! Bad!
 
